# cleanroom-website

./: .gitignore  .gitmodules  .grove.toml  .repo-tools.toml  .semgrepignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_STATUS.md  README.md  TEST_REPORT.md  WARNING_ANALYSIS.md  WEEKS_1-4_COMPLETE.md  deployment-plan.md  development-plan.md  improvements.txt  maintenance-plan.md  migration-plan.md  netlify.toml  next-sitemap.config.js  next.config.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  tailwind.config.js  vitest.config.js  wrangler.jsonc
.claude/: settings.json  settings.local.json
components/: BlogCard.js  BlogEmptyState.js  BlogFilters.js  Footer.js  Hero.js  Layout.js  MDXComponents.js  ProductCard.js
data/: products.js
docs/: ARCHITECTURE.md  CI_CD_GUIDE.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  README.md  STYLE_GUIDE.md  SUBMODULES_GUIDE.md  TEAM_TRAINING.md  TROUBLESHOOTING.md  VERSIONING_GUIDE.md  (+1 more)
grove/: README.md  (+1 more)
repo-tools/: .gitignore  README.md  pyproject.toml
repo-tools/docs/: deferred-ideas.md  submodule-workflow.md
repo-tools/src/repo_tools/: __init__.py  check.py  cli.py  config.py  push.py  repo_utils.py  sync.py  topology.py  worktree.py  worktree_merge.py
repo-tools/src/repo_tools/visualizer/: __main__.py  actions.py  app.py  graph_canvas.py  layout.py  repo_node.py
repo-tools/tests/: conftest.py  test_check.py  test_cli.py  test_config.py  test_push.py  test_repo_utils.py  test_sync.py  test_topology.py  test_worktree.py  test_worktree_merge.py
(+92 files in other folders)
