[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-tools"
version = "0.1.0"
description = "Git submodule management tools for Cleanroom Labs"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
repo-tools = "repo_tools.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
